# tracking-board

./: .gitignore  Pipfile  README.md  pyproject.toml
apps/api/: urls.py
apps/core/: utils.py  validators.py
apps/users/: admin.py  auth_views.py  forms.py  models.py  serializers.py  views.py
apps/users/migrations/: 0001_initial.py
apps/users/models/: __init__.py  advertiser.py  users.py
backend/: conftest.py  pyproject.toml  pytest.ini
backend/apps/api/: urls.py
backend/apps/board/: enums.py  models.py  serializers.py  urls.py  views.py
backend/apps/board/migrations/: 0001_initial.py  0002_boarduser_board_members_boarduser_board_and_more.py
backend/apps/board/tests/: factories.py  tests.py
backend/apps/columns/: admin.py  apps.py  enums.py  models.py  serializers.py  urls.py  views.py
backend/apps/columns/migrations/: 0001_initial.py
backend/apps/columns/tests/: factories.py  tests.py
backend/apps/users/: auth_views.py
backend/apps/users/tests/: factories.py
backend/config/: celery.py
backend/config/settings/: base.py
config/: celery.py  urls.py
config/settings/: base.py  dev.py  production.py  stage.py
templates/users/: password_reset_body.txt
