[tool.poetry]
name = "django-skeleton"
version = "1.0.0"
description = "Django skeleton with most useful functionalities for new projects."
authors = [""]

[tool.poetry.dependencies]
python = "3.7.0"
django = "2.2.3"
djangorestframework = "3.9.4"
django-cors-headers = "*"
dj-database-url = "*"
psycopg2 = "*"
psycopg2-binary = "*"
celery = "4.3.0"
redis = "3.2.1"
pillow = "6.0.0"
django-rest-auth = "0.9.5"
django-allauth = "0.39.1"
django-extensions = "*"
django-debug-toolbar = "*"
drf-yasg = "*"
kombu = "*"
sentry-sdk = "*"
gunicorn = "*"
raven = "*"
django-anymail = "*"

[tool.poetry.dev-dependencies]
django = "2.2.3"
djangorestframework = "3.9.4"
django-cors-headers = "*"
dj-database-url = "*"
django-debug-toolbar = "*"
psycopg2 = "*"
psycopg2-binary = "*"
celery = "4.3.0"
redis = "3.2.1"
drf-yasg = "*"
django-phonenumber-field = "*"
pillow = "6.0.0"
django-rest-auth = "*"
django-allauth = "*"
django-extensions = "*"

#[tool.poetry.scripts]
#migrate = "python manage.py migrate"
#makemigrations = "python manage.py makemigrations"
#server = "python manage.py runserver"
#createsuperuser = "python manage.py createsuperuser"
#shell = "python manage.py shell_plus"
#show_urls = "python manage.py show_urls"
#celery = "celery -A config.celery worker -B -l info"
#collectstatic = "python manage.py collectstatic --no-input"