[tool.poetry]
name = "django_template"
version = "0.1.0"
description = ""
authors = ["Sviatoslav Kovaliv <sviatoslav.kovaliv@wesoftyou.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.3.0"
pytest-django = "^4.5.2"
pytest-factoryboy = "^2.5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
